# BitCoin

./: .gitignore  CMakeLists.txt  ReadMe
AppOut/: BitCoin  addr.txt  rmDb.sh  run.sh  runMemCheck.sh
Proto/: Address.proto  Block.proto  BlockLocator.proto  CMakeLists.txt  DiskBlockIndex.proto  DiskTxPos.proto  GetBlocks.proto  Hello.proto  Inventory.proto  Message.proto  MessageHeader.proto  Order.proto  Review.proto  ServerMessage.proto  Transaction.proto  TxIn.proto  TxIndex.proto  TxOut.proto  Version.proto  WalletTx.proto
Server/: CMakeLists.txt
Server/Proto/: CMakeLists.txt  ServerMessage.proto
Server/Src/: CMakeLists.txt  CommonDef.h  ServerMessage.pb.cc  ServerMessage.pb.h  UdpSocket.cpp  main.cpp  rtdealer.c
Src/: CMakeLists.txt  TestTxSend.cpp  TestTxSend.h  base58.h  bignum.h  cscope.sh  db.cpp  db.h  headers.h  irc.cpp  irc.h  key.h  main.cpp  main.h  market.cpp  market.h  net.cpp  net.h  script.cpp  script.h  serialize.h  sha.cpp  test.cpp  ui.cpp  ui.h  uibase.cpp  uibase.h  uint256.h  util.cpp  util.h
Src/BitCoinMiner/: CMakeLists.txt
Src/Block/: CBlock.cpp  CBlock.h  CBlockIndex.h  CBlockLocator.h  CDiskBlockIndex.h  CDiskTxPos.h
Src/BlockEngine/: BlockEngine.cpp  BlockEngine.h  CBlock.cpp  CBlock.h  CBlockIndex.h  CBlockLocator.h  CDiskBlockIndex.h  CDiskTxPos.cpp  CDiskTxPos.h  CDiskTxPos_bak.h  CMakeLists.txt
Src/CommonBase/: BlockEngine.cpp  BlockEngine.h  CMakeLists.txt  CommDataDef.h  CommFunctionDef.cpp  CommFunctionDef.h  ProtocSerialize.cpp  ProtocSerialize.h  ThreadGuard.h  base58.h  bignum.h  headers.h  key.h  main.cpp  main.h  market.cpp  market.h  script.cpp  script.h  serialize.h  serialize_bak.h  sha.h  uint256.h  util.cpp  util.h
Src/CommonBase/ProtocSrc/: Address.pb.cc  Address.pb.h  Block.pb.cc  Block.pb.h  DiskBlockIndex.pb.cc  DiskBlockIndex.pb.h  DiskTxPos.pb.cc  DiskTxPos.pb.h  GetBlocks.pb.cc  GetBlocks.pb.h  Hello.pb.cc  Inventory.pb.cc  Inventory.pb.h  Message.pb.cc  Message.pb.h  Order.pb.cc  Order.pb.h  Review.pb.cc  Review.pb.h  ServerMessage.pb.cc  ServerMessage.pb.h  Transaction.pb.cc  TxIn.pb.cc  TxIn.pb.h  TxIndex.pb.cc  TxIndex.pb.h  TxOut.pb.cc  TxOut.pb.h  Version.pb.cc  Version.pb.h  WalletTx.pb.cc  WalletTx.pb.h
Src/DAO/: CAddrDB.cpp  CAddrDB.h  CDB.cpp  CDB.h  CMakeLists.txt  CReviewDB.cpp  CReviewDB.h  CTxDB.cpp  CTxDB.h  CWalletDB.cpp  CWalletDB.h  DaoServ.cpp  DaoServ.h  db.cpp  db.h
Src/Db/: CAddrDB.cpp  CAddrDB.h  CDB.cpp  CDB.h  CReviewDB.cpp  CReviewDB.h  CTxDB.cpp  CTxDB.h  CWalletDB.cpp  CWalletDB.h  db.cpp  db.h
Src/NetWorkService/: CAddress.h  CInv.h  CMakeLists.txt  CMessageHeader.h  CNode.cpp  CNode.h  CRequestTracker.h  NetWorkServ.cpp  NetWorkServ.h  NetWorkThread.cpp  Net_DataDef.h  PeerNode.cpp  PeerNode.h  SocketWraper.cpp  SocketWraper.h  ZMQNode.cpp  ZMQNode.h  irc.cpp  irc.h  zhelpers.h
Src/Network/: CAddress.h  CInv.h  CMessageHeader.h  CNode.h  CRequestTracker.h  Net_DataDef.h  irc.cpp  net.cpp  net.h
Src/ProtocSrc/: Address.pb.cc  Address.pb.h  Block.pb.cc  Block.pb.h  GetBlocks.pb.cc  Hello.pb.h  Inventory.pb.cc  Inventory.pb.h  Message.pb.cc  Message.pb.h  MessageHeader.pb.cc  MessageHeader.pb.h  Order.pb.cc  Order.pb.h  Transaction.pb.h  TxIn.pb.cc  TxIn.pb.h  TxOut.pb.cc  TxOut.pb.h
Src/TX/: CMerkleTx.cpp  CMerkleTx.h  CTransaction.cpp  CTransaction.h  CTxIn.cpp  CTxIn.h  CTxInPoint.h  CTxIndex.h  CTxOut.h  CTxOutPoint.h  CWalletTx.cpp  CWalletTx.h
Src/WalletService/: CMakeLists.txt  CMerkleTx.cpp  CMerkleTx.h  CTransaction.cpp  CTransaction.h  CTxIn.cpp  CTxIn.h  CTxInPoint.h  CTxIndex.h  CTxOut.h  CTxOutPoint.h  CWalletTx.cpp  CWalletTx.h  WalletServ.cpp  WalletServ.h
